--- a/SOS Flashlight & Morse Code/Info.plist
+++ b/SOS Flashlight & Morse Code/Info.plist
@@ -26,6 +26,8 @@
 	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>Allow app to track your IDFA key for advertisers to personalise the ads</string>
 	<key>SKAdNetworkItems</key>
 	<array>
 		<dict>
