ITSAppUsesNonExemptEncryption to no

--- a/SOS Flashlight & Morse Code/Info.plist
+++ b/SOS Flashlight & Morse Code/Info.plist
@@ -22,6 +22,8 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>GADApplicationIdentifier</key>
 	<string>ca-app-pub-7684079924348277~7900838766</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
 	<key>LSRequiresIPhoneOS</key>
